# insane-british-anagram-rust

./: Cargo.toml  README.md  build.sh  hyperfine.sh  insane-british-anagram.service  run.sh  server.py  time.sh
nodejs/: index.js  package.json
src/: insane-british-anagram-0.rs  insane-british-anagram-1.rs  insane-british-anagram-2.rs  insane-british-anagram-3.rs  insane-british-anagram-4.rs  insane-british-anagram-5.rs  insaneHTTP.rs  insane_http.rs  lib.rs  main.rs  thread_pool.rs
www/: 404.html  index.html
