[package]
name = "insane-british-anagram"
version = "0.1.3"
authors = ["zicog <zicog@example.com>"]
edition = "2018"


[[bin]]
name = "iba-0"
path = "src/insane-british-anagram-0.rs"

#[[bin]]
#name = "iba-1"
#path = "src/insane-british-anagram-1.rs"

[[bin]]
name = "iba-2"
path = "src/insane-british-anagram-2.rs"

[[bin]]
name = "iba-3"
path = "src/insane-british-anagram-3.rs"

[[bin]]
name = "iba-4"
path = "src/insane-british-anagram-4.rs"

[[bin]]
name = "iba-5"
path = "src/insane-british-anagram-5.rs"

[[bin]]
name = "insane-british-anagram"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hashbrown = "0.5"
typename = "0.1.1"
microbench = "0.5.0"
time = "0.1"
wasm-bindgen = "0.2.48"
arrayvec = "0.4.11"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]



[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'

[features]
# no features by default
default = []

# Add feature "foo" here, then you can use it. 
# Our "web" feature depends on nothing else.
web = []

panic_immediate_abort = []

